<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/ui_item_margin_reduce" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_string"
                android:scaleType="fitCenter" />
        </LinearLayout>
        
        <TextView
	        android:id="@+id/tvName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAllCaps="true"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:layout_marginTop="@dimen/ui_item_margin_reduce"
	        android:layout_marginBottom="@dimen/ui_item_margin_reduce" />    
	               		
		<TextView
       	    android:id="@+id/TextView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/descr_string"
	        style="?android:attr/listSeparatorTextViewStyle" />
    		
		<TextView
	        android:id="@+id/tvDescr"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="15sp"
	      	android:layout_marginTop="@dimen/ui_item_margin_reduce"
	        android:layout_marginBottom="@dimen/ui_item_margin_reduce" />	    
	        
		<TextView
       	    android:id="@+id/TextView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/measure_string"
	        style="?android:attr/listSeparatorTextViewStyle" />
    		
		<TextView
	        android:id="@+id/tvMeasure"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="15sp"
	       	android:layout_marginTop="@dimen/ui_item_margin_reduce"
	        android:layout_marginBottom="@dimen/ui_item_margin_reduce" />	
	        
		<TextView
       	    android:id="@+id/TextView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/price_string"
	        style="?android:attr/listSeparatorTextViewStyle" />
    		
		<TextView
	        android:id="@+id/tvPrice"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="15sp"
	      	android:layout_marginTop="@dimen/ui_item_margin_reduce" />				
    </LinearLayout>
</ScrollView>